# TinyStudio

./: .gitignore  CMakeLists.txt  LICENSE  README.md  debug.project.xml  example.project.xml  newcalm.project.xml
include/: VideoProcessNode.h  VideoSequence.h  VideoSink.h  VideoSketch.h  VideoSource.h  VideoSplice.h  VideoSplit.h
pugixml/: CMakeLists.txt
pugixml/docs/samples/: traverse_walker.cpp
src/: SpliceTest.h  TinyStudio.cpp  VideoProcessNode.cpp  VideoSequence.cpp  VideoSink.cpp  VideoSketch.cpp  VideoSource.cpp  VideoSplice.cpp  VideoSplit.cpp
src/test/: SpliceTest.cpp
